# nimbus

./: .gitignore  LICENSE  README.md  build-deploy.sh  docker-compose.yml
aws-api/: Dockerfile.api  aws_api.py  docker_api.py  pyproject.toml  ssm_parameters.py  timedlocking.py
aws-api/console/: app.js  index.html  styles.css
docker-files/: docker-compose-ddb.yml  docker-compose-ecr.yml  docker-compose-esm.yml  docker-compose-lambda.yml  docker-compose-s3.yml  docker-compose-sm.yml  docker-compose-sqs.yml
docs/: container-lifecycle.mermaid  infra.dot  localcloud.dot
src/aws-api/: Dockerfile  aws_api.py  cloudwatch_logs.db  custom_logger.py  database.py  pyproject.toml  ssm_parameters.py  timedlocking.py
src/dynamodb/: Dockerfile
src/event-source-mapping/: Dockerfile  custom_logger.py  event_invoke_config.py  main.py  timedlocking.py
src/lambda/: Dockerfile  custom_logger.py  log_manager.py  main.py  pyproject.toml
src/s3/: Dockerfile  config.env.unused  docker-entrypoint.sh
src/secrets-manager/: Dockerfile  custom_logger.py  main.py  pyproject.toml
src/sqs/: Dockerfile-backend  Dockerfile-sqs  custom-backend.conf  custom_logger.py  main.py  pyproject.toml
tests/: run_all_tests.sh  test_cloudwatch_logs.py  test_dynamodb.py  test_ecr.py  test_event_source_mapping.py  test_lambda.py  test_s3.py  test_secrets_manager.py  test_sqs.py  test_ssm.py
tests/ddb/: response.json  test.sh
tests/ecr/: lambda_function.py  response.json  test.sh
tests/lambda/rust/: Cargo.toml  Dockerfile  Dockerfile.multi  test.sh
tests/lambda/rust/src/: main.rs
(+21 files in other folders)
