[project]
name = "Nimbus - LocalCloud"
version = "0.1.0"
description = "A free and open source cloud computing platform for local development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.15",
    "docker>=7.1.0",
    "flask>=3.1.2",
    "pika>=1.3.2",
    "requests>=2.32.5",
    "requests-unixsocket>=0.4.1",
]
